add error handling on input

--- a/index.html
+++ b/index.html
@@ -180,14 +180,17 @@
 				<div class="form-group">
 					<label for="inputCellTypes" class="col-form-label" style="color: black;">Cell Types</label>
 					<textarea class="form-control" rows="3" id="inputCellTypes">[0-7]: office&#13;&#10;[7-14]: residence</textarea>
+					<div id="inputCellTypesFeedback" class="invalid-feedback"></div>
 				</div>
 				<div class="form-group">
 					<label for="inputCoreCells" class="col-form-label" style="color: black;">Core Cells</label>
 					<textarea class="form-control" rows="3" id="inputCoreCells">[0-7]: (4, 4), (4, 5), (5, 4), (5, 5)&#13;&#10;[7-14]: (5, 5)</textarea>
+					<div id="inputCoreCellsFeedback" class="invalid-feedback"></div>
 				</div>
 				<div class="form-group">
 					<label for="inputDeadCells" class="col-form-label" style="color: black;">Dead Cells</label>
 					<textarea class="form-control" rows="3" id="inputDeadCells">[0-7]: (0, 0), (9, 9)</textarea>
+					<div id="inputDeadCellsFeedback" class="invalid-feedback"></div>
 				</div>
 				</form>
 			</div>
