--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
 							<div class="input-group col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
 								<input id="buttonSetCustomRuleset" type="button" class="btn btn-light btn-sm" value="Custom Rulseset" data-toggle="modal" data-target="#customRulesetModal" style="width: 100%;" disabled/>
 							</div>
+							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
+								<div class="input-group-prepend">
+									<span class="input-group-text">Floor Fill %</span>
+								</div>
+								<input id="inputFloorFill" type="number" value=50 class="form-control">
+							</div>
+							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
+								<div class="input-group-prepend">
+									<span class="input-group-text">Vol Fill %</span>
+								</div>
+								<input id="inputVolumeFill" type="number" value=50 class="form-control">
+							</div>
 							<div class="form-check col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
 								<input class="form-check-input" type="checkbox" id="inputWraparound" style="margin-left:0px;">
 								<label class="form-check-label" for="inputWraparound" style="padding-left:20px; font-family:Lato; font-size:14px">
