--- a/index.html
+++ b/index.html
@@ -87,17 +87,8 @@
 							<div class="input-group col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
 								<input id="buttonSetCustomRuleset" type="button" class="btn btn-light btn-sm" value="Custom Rulseset" data-toggle="modal" data-target="#customRulesetModal" style="width: 100%;" disabled/>
 							</div>
-							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
-								<div class="input-group-prepend">
-									<span class="input-group-text">Floor Fill %</span>
-								</div>
-								<input id="inputFloorFill" type="number" value=50 class="form-control">
-							</div>
-							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
-								<div class="input-group-prepend">
-									<span class="input-group-text">Vol Fill %</span>
-								</div>
-								<input id="inputVolumeFill" type="number" value=50 class="form-control">
+							<div class="input-group col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
+								<input id="buttonSetPropogationParameters" type="button" class="btn btn-light btn-sm" value="Propogation Parameters" data-toggle="modal" data-target="#propogationParametersModal" style="width: 100%;"/>
 							</div>
 							<div class="form-check col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
 								<input class="form-check-input" type="checkbox" id="inputWraparound" style="margin-left:0px;">
@@ -139,12 +130,20 @@
 							</div>
 
 							<div class="col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
-								<label id="cellDrawScaleValue" class="form-check-label" style="font-family:Lato; font-size:14px">
-									Cell Draw Scale: 1.0x
+								<label id="cellXYScaleValue" class="form-check-label" style="font-family:Lato; font-size:14px">
+									Cell XY Scale: 1.0x
 								</label>
 							</div>
 							<div class="col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
-								<input id="cellDrawScaleSlider" data-slider-id='sliderCellDrawScale' type="text" data-slider-min="1" data-slider-max="4" data-slider-step="0.1" data-slider-value="1" data-slider-enabled="true"/>
+								<input id="cellXYScaleSlider" data-slider-id='sliderCellXYScale' type="text" data-slider-min="1" data-slider-max="4" data-slider-step="0.1" data-slider-value="1" data-slider-enabled="true"/>
+							</div>
+							<div class="col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
+								<label id="cellZScaleValue" class="form-check-label" style="font-family:Lato; font-size:14px">
+									Cell Z Scale: 1.0x
+								</label>
+							</div>
+							<div class="col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
+								<input id="cellZScaleSlider" data-slider-id='sliderCellZScale' type="text" data-slider-min="0.3" data-slider-max="2" data-slider-step="0.1" data-slider-value="1" data-slider-enabled="true"/>
 							</div>
 						</div>
 					</div>
@@ -238,6 +237,35 @@
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 				<button id="buttonSaveCustomRuleset" type="button" class="btn btn-primary">Save</button>
+			</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="propogationParametersModal" tabindex="-1" role="dialog" aria-labelledby="propogationParametersModal" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Set Propogation Parameters</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form>
+				<div class="form-group">
+					<label for="inputVolumeFill" class="col-form-label" style="color: black;">Volume Fill Percentage</label>
+					<input id="inputVolumeFill" type="number" class="form-control">
+				</div>
+				<div class="form-group">
+					<label for="inputFloorFill" class="col-form-label" style="color: black;">Floor Fill Percentage</label>
+					<textarea class="form-control" rows="7" id="inputFloorFill"></textarea>
+				</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				<button id="buttonSavePropogationParameters" type="button" class="btn btn-primary">Save</button>
 			</div>
 			</div>
 		</div>
