--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 				<div class="form-group">
 					<label for="inputFloors" class="col-form-label" style="color: black;">Total Floors</label>
 					<input id="inputFloors" type="number" value=14 class="form-control">
+					<div id="inputFloorsFeedback" class="invalid-feedback"></div>
 				</div>
 				<div class="form-group">
 					<label for="inputCellTypes" class="col-form-label" style="color: black;">Cell Types</label>
@@ -202,11 +203,13 @@
 				</div>
 				<div class="form-group">
 					<label for="inputVolumeFill" class="col-form-label" style="color: black;">Volume Fill Percentage</label>
-					<input id="inputVolumeFill" type="number" class="form-control">
+					<input id="inputVolumeFill" type="number" class="form-control" min"1">
+					<div id="inputVolumeFillFeedback" class="invalid-feedback"></div>
 				</div>
 				<div class="form-group">
 					<label for="inputFloorFill" class="col-form-label" style="color: black;">Floor Fill Percentage</label>
 					<textarea class="form-control" rows="3" id="inputFloorFill"></textarea>
+					<div id="inputFloorFillFeedback" class="invalid-feedback"></div>
 				</div>
 				</form>
 			</div>
