--- a/index.html
+++ b/index.html
@@ -66,8 +66,14 @@
 							<div class="input-group col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
 								<input id="buttonSetBuildingParameters" type="button" class="btn btn-light btn-sm" value="Building Parameters" data-toggle="modal" data-target="#buildingParametersModal" style="width: 100%;"/>
 							</div>
+							<div class="form-check col-lg-12 col-md-12 col-sm-4 col-6 padding-5" style="padding-bottom: 0; padding-top:0;">
+								<input class="form-check-input" type="checkbox" id="inputInvertedPropogation" style="margin-left:0px;">
+								<label class="form-check-label" for="inputInvertedPropogation" style="padding-left:20px; font-family:Lato; font-size:14px">
+									Inverted Propogation
+								</label>
+							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
-								<input id="buttonSetInitial" type="button" class="btn btn-secondary btn-sm" value="Set Initial Generation"/>
+								<input id="buttonSetInitial" type="button" class="btn btn-secondary btn-sm" value="Set Initial Parameters"/>
 							</div>
 						</div>
 					</div>
@@ -87,7 +93,7 @@
 							<div class="input-group col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
 								<input id="buttonSetCustomRuleset" type="button" class="btn btn-light btn-sm" value="Custom Rulseset" data-toggle="modal" data-target="#customRulesetModal" style="width: 100%;" disabled/>
 							</div>
-							<div class="form-check col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
+							<div class="form-check col-lg-12 col-md-12 col-sm-4 col-6 padding-5" style="padding-bottom: 0; padding-top:0;">
 								<input class="form-check-input" type="checkbox" id="inputWraparound" style="margin-left:0px;">
 								<label class="form-check-label" for="inputWraparound" style="padding-left:20px; font-family:Lato; font-size:14px">
 									Wraparound
@@ -200,11 +206,6 @@
 					<label for="inputDeadCells" class="col-form-label" style="color: black;">Dead Cells</label>
 					<textarea class="form-control" rows="3" id="inputDeadCells">[0-7]: (0, 0), (9, 9)</textarea>
 					<div id="inputDeadCellsFeedback" class="invalid-feedback"></div>
-				</div>
-				<div class="form-group">
-					<label for="inputVolumeFill" class="col-form-label" style="color: black;">Volume Fill Percentage</label>
-					<input id="inputVolumeFill" type="number" class="form-control" min"1">
-					<div id="inputVolumeFillFeedback" class="invalid-feedback"></div>
 				</div>
 				<div class="form-group">
 					<label for="inputFloorFill" class="col-form-label" style="color: black;">Floor Fill Percentage</label>
