added more buttons and error handling

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 								</div>
 								<input id="inputUnitSize" type="number" value=10 class="form-control">
 							</div>
+							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
+								<input id="buttonSetGrid" type="button" class="btn btn-secondary btn-sm" value="Set Grid"/>
+							</div>
 						</div>
 					</div>
 
@@ -88,7 +91,7 @@
 								</label>
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
-								<input id="buttonSetInitial" type="button" class="btn btn-secondary btn-sm" value="Set Initial Parameters"/>
+								<input id="buttonSetInitial" type="button" class="btn btn-secondary btn-sm" value="Set Initial Parameters" disabled/>
 							</div>
 						</div>
 					</div>
@@ -115,7 +118,7 @@
 								</label>
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
-								<input id="buttonPropagate" type="button" class="btn btn-secondary btn-sm" value="Propagate"/>
+								<input id="buttonPropagate" type="button" class="btn btn-secondary btn-sm" value="Propagate" disabled/>
 							</div>
 						</div>
 					</div>
