--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 							
 							<div class="col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
 								<div class="d-flex flex-row flex-wrap justify-content-end">
-									<div class="padding-5" style="padding-top:3px; padding-bottom:3px;"><input id="buttonExportCAD" type="button" class="btn btn-light btn-sm" value="Export CAD" disabled/></div>
+									<div class="padding-5" style="padding-top:3px; padding-bottom:3px;"><input id="buttonExportCAD" type="button" class="btn btn-light btn-sm" value="Export SCAD" disabled/></div>
 									<div class="padding-5" style="padding-top:3px; padding-bottom:3px; padding-right:0px;"><input id="buttonExportLayers" type="button" class="btn btn-light btn-sm" value="Export Layers"/></div>
 								</div>
 							</div>
