--- a/index.html
+++ b/index.html
@@ -172,13 +172,25 @@
 					<div class="col-lg-12 col-md-12 col-sm-12 col-12" style="padding-bottom:15px">
 						<div class="row padding-10">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
-								<h6 style="color: white;">Export</h6>
+								<h6 style="color: white;">Import/Export</h6>
 							</div>
-							
-							<div class="col-lg-12 col-md-12 col-sm-12 col-12 padding-5">
-								<div class="d-flex flex-row flex-wrap justify-content-end">
-									<div class="padding-5" style="padding-top:3px; padding-bottom:3px;"><input id="buttonExportCAD" type="button" class="btn btn-light btn-sm" value="Export SCAD" disabled/></div>
-									<div class="padding-5" style="padding-top:3px; padding-bottom:3px; padding-right:0px;"><input id="buttonExportLayers" type="button" class="btn btn-light btn-sm" value="Export Layers"/></div>
+
+							<div class="dropdown col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
+								<button class="btn btn-light btn-sm dropdown-toggle" type="button" id="buttonImport" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="width: 100%;">
+									Import
+								</button>
+								<div class="dropdown-menu" aria-labelledby="buttonImport" id="dropdownImport" style="width: 100%;">
+									<button class="dropdown-item btn-sm" value="1">SCAD</button>
+								</div>
+							</div>
+							<div class="dropdown col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
+								<button class="btn btn-light btn-sm dropdown-toggle" type="button" id="buttonExport" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="width: 100%;">
+									Export
+								</button>
+								<div class="dropdown-menu" aria-labelledby="buttonExport" id="dropdownExport" style="width: 100%;">
+									<button class="dropdown-item btn-sm" value="1">Current State</button>
+									<button class="dropdown-item btn-sm" value="2">Layers</button>
+									<button class="dropdown-item btn-sm" value="3">SCAD</button>
 								</div>
 							</div>
 						</div>
