--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 									Import
 								</button>
 								<div class="dropdown-menu" aria-labelledby="buttonImport" id="dropdownImport" style="width: 100%;">
-									<button class="dropdown-item btn-sm" value="1">SCAD</button>
+									<label for="file-input" class="dropdown-item btn-sm" value="1">SCAD</label>
 								</div>
 							</div>
 							<div class="dropdown col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
@@ -206,6 +206,8 @@
 		</div>
 	</div>
 
+	<input type="file" id="file-input" style="position: fixed; top: -100em; opacity: 0;">
+	
 	<div class="modal fade" id="buildingParametersModal" tabindex="-1" role="dialog" aria-labelledby="buildingParametersModal" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
