fix x and y througout the code

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 								<div class="input-group-prepend">
 									<span class="input-group-text" >Footprint X</span>
 								</div>
-								<input id="inputPlotLength" type="number" value=100 class="form-control">
+								<input id="inputFootprintX" type="number" value=100 class="form-control">
 							</div>
 							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
 								<div class="input-group-prepend">
 									<span class="input-group-text">Footprint Y</span>
 								</div>
-								<input id="inputPlotWidth" type="number" value=100 class="form-control">
+								<input id="inputFootprintY" type="number" value=100 class="form-control">
 							</div>
 							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
 								<div class="input-group-prepend">
