--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
 									Import
 								</button>
 								<div class="dropdown-menu" aria-labelledby="buttonImport" id="dropdownImport" style="width: 100%;">
-									<label for="file-input" class="dropdown-item btn-sm" value="1" style="padding-top:0; padding-bottom:0">Building Parameters</label>
-									<label for="file-input" class="dropdown-item btn-sm" value="2" style="padding-top:0; padding-bottom:0">State</label>
-									<label for="file-input" class="dropdown-item btn-sm" value="3" style="padding-top:0; padding-bottom:0">SCAD</label>
+									<label for="file-input" class="dropdown-item btn-sm" value="1" style="margin-top:0; margin-bottom:0;">Building Parameters</label>
+									<label for="file-input" class="dropdown-item btn-sm" value="2" style="margin-top:0; margin-bottom:0;">State</label>
+									<label for="file-input" class="dropdown-item btn-sm" value="3" style="margin-top:0; margin-bottom:0;">SCAD</label>
 								</div>
 							</div>
 							<div class="dropdown col-lg-12 col-md-12 col-sm-4 col-6 padding-5">
