--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 	<input type="file" id="file-input" style="position: fixed; top: -100em; opacity: 0;">
 	
 	<div class="modal fade" id="buildingParametersModal" tabindex="-1" role="dialog" aria-labelledby="buildingParametersModal" aria-hidden="true">
-		<div class="modal-dialog" role="document">
+		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title">Set Building Parameters</h5>
@@ -233,12 +233,12 @@
 				</div>
 				<div class="form-group">
 					<label for="inputCoreCells" class="col-form-label" style="color: black;">Core Cells</label>
-					<textarea class="form-control" rows="3" id="inputCoreCells">[0-7]: (4, 4), (4, 5), (5, 4), (5, 5)&#13;&#10;[7-14]: (5, 5)</textarea>
+					<textarea class="form-control" rows="5" id="inputCoreCells">[0-7]: (4, 4), (4, 5), (5, 4), (5, 5)&#13;&#10;[7-14]: (5, 5)</textarea>
 					<div id="inputCoreCellsFeedback" class="invalid-feedback"></div>
 				</div>
 				<div class="form-group">
 					<label for="inputDeadCells" class="col-form-label" style="color: black;">Dead Cells</label>
-					<textarea class="form-control" rows="3" id="inputDeadCells">[0-7]: (0, 0), (9, 9)</textarea>
+					<textarea class="form-control" rows="5" id="inputDeadCells">[0-7]: (0, 0), (9, 9)</textarea>
 					<div id="inputDeadCellsFeedback" class="invalid-feedback"></div>
 				</div>
 				<div class="form-group">
@@ -257,7 +257,7 @@
 	</div>
 
 	<div class="modal fade" id="customRulesetModal" tabindex="-1" role="dialog" aria-labelledby="customRulesetModal" aria-hidden="true">
-		<div class="modal-dialog" role="document">
+		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title">Set Custom Ruleset</h5>
